@@ -234,6 +234,7 @@ BEGIN
             MENUITEM "&XML format...",          ID_MENUITEM_EXPORTENT2XML
         END
         MENUITEM SEPARATOR
+        MENUITEM "&Add Entry...",               ID_MENUITEM_ADD
         MENUITEM "Add &Group",                  ID_MENUITEM_ADDGROUP
     END
 END
@@ -253,6 +254,7 @@ IDR_POPTREE MENU
 BEGIN
     POPUP ""
     BEGIN
+        MENUITEM "&Add Entry...",               ID_MENUITEM_ADD
         MENUITEM "Add &Group",                  ID_MENUITEM_ADDGROUP
     END
 END
@@ -418,6 +420,7 @@ BEGIN
     ID_MENUITEM_EXPORTENT2PLAINTEXT "\nExport Entry to Plain Text..."
     ID_MENUITEM_EXPORTENT2XML    "\nExport Entry in XML format..."
     ID_MENUITEM_TRAYSELECT       "\nSelect Entry"
+    ID_MENUITEM_ADDGROUP         "\nAdd Group"
 END
 
 STRINGTABLE
